tweak posts page, make spacing for list look correct for multiple posts

--- a/css/base.css
+++ b/css/base.css
@@ -84,3 +84,7 @@ noscript {
 .title-rss {
 	font-size: 18px;
 }
+
+.post-info {
+	margin-bottom: 1rem;
+}
